--- a/app/src/main/res/drawable/card_cart_background.xml
+++ b/app/src/main/res/drawable/card_cart_background.xml
@@ -6,7 +6,7 @@
         </shape>
     </item>
 
-    <item android:top="1dp" android:bottom="1dp">
+    <item android:bottom="1.5dp">
         <shape android:shape="rectangle">
             <stroke android:width="1dp" android:color="#FFF" />
             <solid android:color="#FFF" />
