--- a/app/src/main/res/layout/fragment_delivery.xml
+++ b/app/src/main/res/layout/fragment_delivery.xml
@@ -8,19 +8,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.CardView
+        <Button
+            android:id="@+id/searchButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
-            android:layout_marginTop="20dp">
-
-            <fragment
-                android:id="@+id/autocomplete_fragment"
-                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </android.support.v7.widget.CardView>
+            android:layout_marginTop="20dp"
+            android:background="@android:color/white"
+            android:text="Search" />
 
         <com.google.android.gms.maps.MapView
             android:id="@+id/mapView"
