--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -3,9 +3,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.uottawa.benjaminmacdonald.quicktings.Activities.CartActivity">
 
-    <ListView
+    <android.support.v7.widget.CardView
+        android:id="@+id/undoBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:cardElevation="10dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorAccentLight">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="20dp"
+                android:text="Item deleted"
+                android:textStyle="bold"
+                android:textColor="#FFF"/>
+            <Button
+                android:id="@+id/undoBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true"
+                android:background="@null"
+                android:text="UNDO"
+                android:textStyle="bold"
+                android:textColor="#4281c9"/>
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/cart_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,7 +48,6 @@
         android:layout_width="match_parent"
         android:layout_height="65dp"
         android:layout_gravity="bottom"
-        android:elevation="8dp"
         android:background="@drawable/toolbar_shadow"
         android:weightSum="1">
 
@@ -67,7 +99,7 @@
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="#efa141"
+                    android:background="@color/colorAccentLight"
                     android:onClick="checkoutItems"
                     android:text="CHECKOUT"
                     android:textColor="#FFF" />
