--- a/app/src/main/res/layout/card_cart.xml
+++ b/app/src/main/res/layout/card_cart.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="180dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
-    android:paddingLeft="15dp"
-    android:paddingRight="15dp"
+    android:paddingStart="15dp"
+    android:paddingEnd="5dp"
     android:weightSum="1"
     android:background="@drawable/card_cart_background">
 
@@ -94,7 +94,9 @@
             android:layout_marginStart="90dp"
             android:layout_marginTop="115dp"
             android:layout_marginBottom="5dp"
-            android:elevation="8dp">
+            android:layout_marginEnd="10dp"
+            app:cardElevation="2dp"
+            android:visibility="gone">
 
             <Button
                 android:id="@+id/cart_remove"
