--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -59,12 +59,21 @@
 
     <ListView
         android:id="@+id/productListView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:clipToPadding="false"
         android:divider="@android:color/transparent"
         android:paddingTop="116dp" />
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation_view"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="150dp"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="snap_loader_black.json"
+        app:lottie_loop="true" />
 
 </FrameLayout>
