--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -44,6 +44,7 @@
         app:ms_bottomNavigationBackground="@color/lighterGrey"
         app:ms_inactiveStepColor="#B2B2B2"
         app:ms_stepperType="tabs"
+        app:ms_showBottomNavigation="false"
         app:ms_stepperLayoutTheme="@style/CustomStepperLayoutTheme"/>
 
     <!--<android.support.design.widget.TabLayout-->
