--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -9,7 +9,8 @@
     <android.support.v7.widget.CardView
         android:id="@+id/undoBar"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
+        android:layout_gravity="top"
         android:visibility="gone"
         app:cardElevation="10dp">
         <RelativeLayout
@@ -23,7 +24,6 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="20dp"
                 android:text="Item deleted"
-                android:textStyle="bold"
                 android:textColor="#FFF"/>
             <Button
                 android:id="@+id/undoBtn"
