--- a/app/src/main/res/layout/card_order.xml
+++ b/app/src/main/res/layout/card_order.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -28,6 +29,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical"
+                android:paddingBottom="10dp"
                 android:paddingLeft="12dp">
 
                 <TextView
@@ -50,23 +52,32 @@
                 <ListView
                     android:id="@+id/orderProductList"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="15dp" />
+                    android:layout_height="173dp"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginTop="15dp" />
 
-                <Button
-                    android:id="@+id/orderAgainButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="35dp"
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="15dp"
                     android:layout_marginLeft="20dp"
-                    android:layout_weight="1"
-                    android:background="@color/colorAccentLight"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="30dp"
-                    android:text="Order again"
-                    android:textAlignment="center"
-                    android:textColor="@android:color/white"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
+                    android:layout_marginRight="21dp"
+                    app:cardElevation="6dp">
+
+                    <Button
+                        android:id="@+id/orderAgainButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="35dp"
+                        android:layout_weight="1"
+                        android:background="@color/colorAccent"
+                        android:paddingLeft="30dp"
+                        android:paddingRight="30dp"
+                        android:text="Order again"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/white"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+                </android.support.v7.widget.CardView>
 
             </LinearLayout>
 
