--- a/app/src/main/res/layout/card_order.xml
+++ b/app/src/main/res/layout/card_order.xml
@@ -52,7 +52,7 @@
                 <ListView
                     android:id="@+id/orderProductList"
                     android:layout_width="wrap_content"
-                    android:layout_height="173dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="15dp"
                     android:layout_marginTop="15dp" />
 
