--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -60,7 +60,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="fill_horizontal"
-                            android:src="@drawable/beaus" />
+                            android:src="@drawable/beaus2" />
                     </android.support.v7.widget.CardView>
 
                     <android.support.v7.widget.CardView
