--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -97,7 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_weight="1"
-                android:background="#EFECEC"
+                android:background="@drawable/round_corners"
                 android:paddingBottom="5dp"
                 android:paddingLeft="35dp"
                 android:paddingRight="35dp"
