--- a/app/src/main/res/layout/card_search_result.xml
+++ b/app/src/main/res/layout/card_search_result.xml
@@ -108,7 +108,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="24dp"
             android:layout_weight="0.95"
-            android:text="69 in stock near you"
+            android:text="in stock near you"
             android:textColor="@color/darkGrey"
             android:textStyle="bold" />
 
