--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -94,7 +94,7 @@
                 android:layout_centerInParent="true"
                 android:layout_marginRight="60dp"
                 android:layout_marginTop="30dp"
-                android:elevation="8dp">
+                app:cardElevation="8dp">
 
                 <Button
                     android:layout_width="match_parent"
