--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="colorSuperAccent">#ffd460</color>
     <color name="colorInactive">#AAA9A9</color>
     <color name="colorPlaceholder">#C5C5C3</color>
+    <color name="colorConfirmationText">#434343</color>
 
     <!--<color name="colorPrimary">#607D8B</color>-->
     <!--<color name="colorPrimaryDark">#455A64</color>-->
