--- a/app/src/main/res/menu/product_menu.xml
+++ b/app/src/main/res/menu/product_menu.xml
@@ -12,6 +12,7 @@
 
     <item
         android:id="@+id/action_cart"
+        android:actionLayout="@layout/cart_icon"
         android:icon="@drawable/ic_shopping_cart_white_24dp"
         android:title="Cart"
         app:showAsAction="ifRoom" />
