--- a/app/src/main/res/layout/activity_confirmation.xml
+++ b/app/src/main/res/layout/activity_confirmation.xml
@@ -37,34 +37,37 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Thank you!"
-                    android:textColor="@color/colorConfirmationText"
+                    android:textColor="#565656"
                     android:textSize="45sp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginStart="9dp"
                     android:layout_marginEnd="9dp"
+                    android:layout_marginStart="9dp"
+                    android:layout_marginTop="5dp"
                     android:text="Your order has been completed."
-                    android:textColor="@color/colorConfirmationText"
+                    android:textColor="#565656"
                     android:textSize="25sp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <TextView
                 android:id="@+id/order_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="9dp"
                 android:layout_marginEnd="9dp"
+                android:layout_marginStart="9dp"
                 android:layout_marginTop="25dp"
                 android:text="Ordered on February 23rd 2017"
-                android:textSize="20sp"/>
+                android:textColor="#565656"
+                android:textSize="20sp" />
 
             <LinearLayout
                 android:id="@+id/order_list"
@@ -82,14 +85,20 @@
                 android:layout_marginEnd="9dp"
                 android:layout_marginTop="20dp"
                 android:orientation="horizontal">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Total "/>
+                    android:text="Total "
+                    android:textColor="#565656"
+                    android:textSize="20sp" />
+
                 <TextView
                     android:id="@+id/order_total"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:textColor="#565656"
+                    android:textSize="20sp" />
             </LinearLayout>
 
             <ImageView
@@ -116,16 +125,21 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:orientation="vertical">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:text="Estimate Delivery Time"/>
+                    android:text="Estimate Delivery Time"
+                    android:textColor="#565656" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:text="30 minutes"/>
+                    android:text="30 minutes"
+                    android:textColor="#565656"
+                    android:textStyle="bold" />
             </LinearLayout>
         </RelativeLayout>
 
@@ -140,13 +154,14 @@
                 android:layout_marginEnd="45dp"
                 android:layout_marginTop="30dp"
                 app:cardElevation="5dp">
+
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/colorAccent"
                     android:onClick="trackOrder"
-                    android:text="TRACK ORDER"
-                    android:textColor="@android:color/white"/>
+                    android:text="GO HOME"
+                    android:textColor="@android:color/white" />
             </android.support.v7.widget.CardView>
         </RelativeLayout>
     </LinearLayout>
