--- a/app/src/main/res/layout/activity_confirmation.xml
+++ b/app/src/main/res/layout/activity_confirmation.xml
@@ -42,7 +42,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Thank you!"
-                    android:textColor="#565656"
+                    android:textColor="@color/colorConfirmationText"
                     android:textSize="45sp"
                     android:textStyle="bold" />
 
@@ -53,7 +53,7 @@
                     android:layout_marginStart="9dp"
                     android:layout_marginTop="5dp"
                     android:text="Your order has been completed."
-                    android:textColor="#565656"
+                    android:textColor="@color/colorConfirmationText"
                     android:textSize="25sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -66,7 +66,7 @@
                 android:layout_marginStart="9dp"
                 android:layout_marginTop="25dp"
                 android:text="Ordered on February 23rd 2017"
-                android:textColor="#565656"
+                android:textColor="@color/colorConfirmationText"
                 android:textSize="20sp" />
 
             <LinearLayout
@@ -90,14 +90,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Total "
-                    android:textColor="#565656"
+                    android:textColor="@color/colorConfirmationText"
                     android:textSize="20sp" />
 
                 <TextView
                     android:id="@+id/order_total"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="#565656"
+                    android:textColor="@color/colorConfirmationText"
                     android:textSize="20sp" />
             </LinearLayout>
 
@@ -131,14 +131,14 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="Estimate Delivery Time"
-                    android:textColor="#565656" />
+                    android:textColor="@color/colorConfirmationText" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="30 minutes"
-                    android:textColor="#565656"
+                    android:textColor="@color/colorConfirmationText"
                     android:textStyle="bold" />
             </LinearLayout>
         </RelativeLayout>
