uploads order to db big hack but it works

--- a/app/src/main/res/layout/activity_confirmation.xml
+++ b/app/src/main/res/layout/activity_confirmation.xml
@@ -157,6 +157,7 @@
                 app:cardElevation="5dp">
 
                 <Button
+                    android:id="@+id/homeButton"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/colorAccent"
