--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#2D4059</color>
     <color name="colorPrimaryDark">#1F2C3D</color>
-    <color name="colorAccent">#F07B3F</color>
+    <color name="colorAccent">#f07b3f</color>
     <color name="colorAccentLight">#EFA141</color>
     <color name="colorFavourite">#ea5455</color>
     <color name="colorSuperAccent">#ffd460</color>
