--- a/app/src/main/res/layout/activity_your_orders.xml
+++ b/app/src/main/res/layout/activity_your_orders.xml
@@ -16,7 +16,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="11dp"
-            android:text="Current Orders"
+            android:layout_marginLeft="6dp"
+            android:text="Past Orders"
             android:textColor="#939393"
             android:textSize="18sp" />
 
